--- a/configurations/Regions/ap-southeast-1/ap-southeast-1-jenkins.json
+++ b/configurations/Regions/ap-southeast-1/ap-southeast-1-jenkins.json
@@ -1,6 +1,5 @@
 {
     "region":            "ap-southeast-1",
     "instance_type":      "t2_micro",
-    "source_ami":         "ami-02a39bdb8e8ee056a",
-    "ssh_username":        "ec2-user"
+    "ssh_username":        "centos"
 }
